@@ -1,3 +1,9 @@
+2011-12-11  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/51338
+	Backport from trunk
+	* gfortran.dg/assumed_charlen_substring_1.f90:  New test.
+
 2011-12-09  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline
